--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -19,8 +19,7 @@
             <!--Table head-->
             <thead>
                 <tr>
-                    <th scope="row">#</th>
-                    <th class="th-lg"><a href="">Название товара</a></th>
+                    <th scope="row" class="th-lg"><a href="">Название товара</a></th>
                     <th class="th-lg"><a href="">Бренд</a></th>
                     <th class="th-lg"><a href="">Цена</a></th>
                     <th class="th-lg"><a href="">Опубликовано</a></th>
@@ -31,13 +30,12 @@
             <!--Table head-->
             <!--Table body-->
             <tbody>
-            <form method="POST" action="">
-                            {% csrf_token %}
+                <form method="POST" action="">
+                    {% csrf_token %}
 
-            {% for product in products %}
+                    {% for product in products %}
                     <tr>
-                        <th scope="row">{{product.id}}</th>
-                        <td>{{ product.product_name }}</td>
+                        <th scope="row">{{ product.product_name }}</th>
                         <td>text</td>
                         <td>{{ product.cost }}</td>
                         <td>text</td>
@@ -46,8 +44,8 @@
                         </td>
                     </tr>
 
-            {% endfor %}
-                                                </form>
+                    {% endfor %}
+                </form>
 
             </tbody>
             <!--Table body-->
@@ -137,17 +135,15 @@
     .table.table-bordered th {
         text-align: center;
     }
-
 </style>
 
 <script>
-    $('.Btnn').on('click', {}, function(inBody) {
+    $('.Btnn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
         xhr.open('GET', `becomeCreatorTemplates/6/`)
-        xhr.onload = function() {
+        xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
         }
         xhr.send()
     });
-
 </script>
