add names for partners

--- a/bizopt/BO/templates/becomeCreatorTemplates/template12.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template12.html
@@ -6,13 +6,13 @@
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
                 <label class="labels">Имя</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_first_name" id="">
                 <br>
                 <label class="labels">Фамилия</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_last_name" id="">
                 <br>
                 <label class="labels">Почта</label>
-                <input type="text" class="form-control" name="" id="">
+                <input type="text" class="form-control" name="my_email" id="">
                 <br>
                 <div class="input-group">
                     <input type="file" class="form-control" aria-describedby="" aria-label="">
