--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -32,80 +32,23 @@
         <h2>Рекомендации для вас</h2>
 
         <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
-
+            {%for product in products %}
             <div>
-                <div class="uk-card uk-card-default">
+                <div class="uk-card uk-card-default uk-padding">
                     <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
+                        <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
                     </div>
                     <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                        <h3 class="uk-card-title">{{ product.product_name }}</h3>
+                        <p>{{ product.description }}</p>
+                        <p>{{ product.cost }}</p>
+                        <a href='{{ product.id }}'
+                            class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-text-center uk-border-rounded uk-margin-top">Подробнее</a>
                     </div>
                 </div>
             </div>
-
-          <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-
-          <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-
-          <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-
-          <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
-
-          <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://images.wallpaperscraft.ru/image/single/verba_pochka_puh_276448_1600x1200.jpg" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Top</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
-
     </div>
 </div>
 
