--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -4,22 +4,28 @@
 
 
 
-<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="min-height: 300; max-height: 600; animation: push">
+<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+    uk-slideshow="min-height: 300; max-height: 600; animation: push">
 
     <ul class="uk-slideshow-items">
         <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp" alt="" uk-cover>
+            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
+                alt="" uk-cover>
         </li>
         <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp" alt="" uk-cover>
+            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
+                alt="" uk-cover>
         </li>
         <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp" alt="" uk-cover>
+            <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
+                alt="" uk-cover>
         </li>
     </ul>
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+        uk-slideshow-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+        uk-slideshow-item="next"></a>
 
 </div>
 
@@ -31,22 +37,20 @@
 
         <h2>Рекомендации для вас</h2>
 
-        <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
+        <div class="uk-grid-match uk-child-width-1-4@m" uk-grid>
             {%for product in products %}
-            <div>
-                <div class="uk-card uk-card-default uk-padding">
-                    <div class="uk-card-media-top">
-                        <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">{{ product.product_name }}</h3>
-                        <p>{{ product.description }}</p>
-                        <p>{{ product.cost }}</p>
-                        <a href='{{ product.id }}'
-                            class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-text-center uk-border-rounded uk-margin-top">Подробнее</a>
-                    </div>
+
+                <div>
+                    <a href="creators/goods/{{ product.id }}" class="uk-display-inline-block uk-card uk-card-body uk-card-hover uk-link-toggle uk-width-medium">
+                            <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
+                            <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
+                            <p>{{ product.description }}</p>
+                            <p>{{ product.cost }}</p>
+                            <!-- <a href='{{ product.id }}'
+                                class="uk-button uk-button-primary uk-button-large uk-text-center uk-border-rounded uk-margin-top">Подробнее</a> -->
+                    </a>
                 </div>
-            </div>
+
             {% endfor %}
         </div>
     </div>
