--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -35,7 +35,7 @@
 
                 {% for product in products %}
                     <tr>
-                        <th scope="row">{{ product.product_name }}</th>
+                        <th scope="row"  class="uk-text-truncate">{{ product.product_name }}</th>
                         <td>text</td>
                         <td>{{ product.cost }}</td>
                         <td>text</td>
