change color if side bar in becomecreator

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -314,7 +314,7 @@
         }
         
         .text-sidebar {
-            color: $text-sidebar;
+            /* color: $text-sidebar; */
         }
         
         .wrapper {
@@ -337,18 +337,21 @@
         
         #sidebar .sidebar-header {
             padding: 20px;
-            background: $lila-60
+            /* background: $lila-60; */
             /*#6d7fcc*/
-            ;
+        }
+        
+        .sidebar-header h3{
+            color: white;
         }
         
         #sidebar ul.components {
             padding: 20px 0;
-            border-bottom: 1px solid $lila-line;
+            /* border-bottom: 1px solid $lila-line; */
         }
         
         #sidebar ul p {
-            color: $text-sidebar;
+            /* color: $text-sidebar; */
             padding: 10px;
         }
         
@@ -359,14 +362,14 @@
         }
         
         #sidebar ul li a:hover {
-            color: $lila;
-            background: $text-sidebar-hover;
+            /* color: $lila; */
+            /* background: $text-sidebar-hover; */
         }
         
         #sidebar ul li.active>a,
         a[aria-expanded="true"] {
-            color: $text-sidebar;
-            background: $lila-60;
+            /* color: $text-sidebar; */
+            /* background: $lila-60; */
         }
         
         a[data-toggle="collapse"] {
@@ -384,7 +387,7 @@
         ul ul a {
             font-size: 0.9em !important;
             padding-left: 30px !important;
-            background: $lila-60;
+            /* background: $lila-60; */
         }
         
         ul.CTAs {
@@ -400,14 +403,14 @@
         }
         
         a.download {
-            background: $text-sidebar;
-            color: $lila;
+            /* background: $text-sidebar; */
+            /* color: $lila; */
         }
         
         a.article,
         a.article:hover {
-            background: $lila-60 !important;
-            color: $text-sidebar !important;
+            /* background: $lila-60 !important; */
+            /* color: $text-sidebar !important; */
         }
         
         #content {
