--- a/bizopt/BO/templates/yourTasks.html
+++ b/bizopt/BO/templates/yourTasks.html
@@ -61,7 +61,7 @@
 
                 </dl>
                 <div class="d-grid gap-2 d-md-block">
-                    <a class="btn btn-primary" href="editTask/" role="button">Редактировать</a>
+                    <a class="btn btn-primary" href="editTask/{{ task.id }}" role="button">Редактировать</a>
                     <a class="btn btn-primary" href="infoTask/" role="button">Информация</a>
                 </div>
 
