--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,118 +1,102 @@
-<nav class="uk-navbar-container" uk-navbar>
+<nav class="uk-navbar-container uk-text-middle" uk-navbar>
+    {% if user.is_authenticated %}
 
     <div class="uk-navbar-left">
-
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="/">
-                    <h1>BIZOPT</h1>
+            {% for item in menu %}
+            {% if item.xpos == 'left' %}
+            {% if item.text == 'BeeFreela' %}
+            <li class="uk-active"><a href="{{item.link}}">
+                    <h1 class="uk-margin-remove">{{item.text}}</h1>
                 </a></li>
-            <!--            <li>-->
-            <!--                <a href="#">Parent</a>-->
-            <!--                <div class="uk-navbar-dropdown">-->
-            <!--                    <ul class="uk-nav uk-navbar-dropdown-nav">-->
-            <!--                        <li class="uk-active"><a href="#">Active</a></li>-->
-            <!--                        <li><a href="#">Item</a></li>-->
-            <!--                        <li><a href="#">Item</a></li>-->
-            <!--                    </ul>-->
-            <!--                </div>-->
-            <!--            </li>-->
-            <!--            <li><a href="#">Item</a></li>-->
+            {% else %}
+            <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+
         </ul>
-
     </div>
+
+
     <div class="uk-navbar-center">
+        <ul class="uk-navbar-nav">
 
+            {% for item in menu %}
+            {% if item.xpos == 'center' %}
+            <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+            {% endif %}
+            {% endfor %}
 
-        <form class="uk-search uk-search-default uk-search-navbar">
-            <span uk-search-icon></span>
-            <input class="uk-search-input" type="search" placeholder="Search">
-        </form>
+        </ul>
     </div>
 
     <div class="uk-navbar-right">
-
         <ul class="uk-navbar-nav">
 
-            {% if user.is_authenticated %}
-            {% for item in menu %}
-            {% if item.text != user.email %}
-
-            <li class="uk-active"><a href="{{ item.link }}">{{ item.text }}</a></li>
-
-            <!--            <li class="nav-item">-->
-            <!--                <a class="nav-link active" aria-current="page" style="color: white;" href="{{ item.link }}">{{ item.text }}</a>-->
-            <!--            </li>-->
-
-            {% else %}
-
-            {% if item.position == "out" %}
-
-
-            <li>
-                <a href="{{ item.link }}">{{item.text}}</a>
-
-                <!--                <li><a class="nav-link active" aria-current="page" style="color: white;" href="accounts/login/">Войти</a></li>-->
+            <li class="uk-active">
+                {% for item in menu %}
+                {% if item.xpos == 'right' and item.position == 'out' %}
+                <a href="{{item.link}}">{{item.text}}</a>
+                {% endif %}
+                {% endfor %}
                 <div class="uk-navbar-dropdown">
-
-                    {% endif %}
                     <ul class="uk-nav uk-navbar-dropdown-nav">
-                        {% if item.position == "in"  %}
-                        <li><a href="{{ item.link }}">{{ item.name }}</a></li>
+                        {% for item in menu %}
+                        {% if item.xpos == 'right' and item.position == 'in' %}
+                        <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+                        {% endif %}
+                        {% endfor %}
                     </ul>
                 </div>
-                {% endif %}
-
-
-                {% endif %}
             </li>
-            {% endfor %}
-
-
-
-            {% else %}
-
-            {% for item in menu %}
-            {% if item.text != user.email %}
-
-            <li class="uk-active"><a href="{{ item.link }}">{{ item.text }}</a></li>
-
-            <!--            <li class="nav-item">-->
-            <!--                <a class="nav-link active" aria-current="page" style="color: white;" href="{{ item.link }}">{{ item.text }}</a>-->
-            <!--            </li>-->
-
-            {% else %}
-
-
-
-
-            <!--                <li><a class="nav-link active" aria-current="page" style="color: white;" href="accounts/login/">Войти</a></li>-->
-
-
-            {% endif %}
-
-            {% endfor %}
-
-
-            {% endif %}
-
-
-
-
-            <!--            <li class="uk-active"><a href="#">Active</a></li>-->
-            <!--            <li>-->
-            <!--                <a href="#">Parent</a>-->
-            <!--                <div class="uk-navbar-dropdown">-->
-            <!--                    <ul class="uk-nav uk-navbar-dropdown-nav">-->
-            <!--                        <li class="uk-active"><a href="#">Active</a></li>-->
-            <!--                        <li><a href="#">Item</a></li>-->
-            <!--                        <li><a href="#">Item</a></li>-->
-            <!--                    </ul>-->
-            <!--                </div>-->
-            <!--            </li>-->
-            <!--            <li><a href="#">Item</a></li>-->
 
         </ul>
-
     </div>
 
+    {% else %}
+
+    <div class="uk-navbar-left">
+        <ul class="uk-navbar-nav">
+            {% for item in menu %}
+            {% if item.xpos == 'left' %}
+            {% if item.text == 'BeeFreela' %}
+            <li class="uk-active"><a href="{{item.link}}">
+                    <h1>{{item.text}}</h1>
+                </a></li>
+            {% else %}
+            <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+
+        </ul>
+    </div>
+
+
+    <div class="uk-navbar-center">
+        <ul class="uk-navbar-nav">
+
+            {% for item in menu %}
+            {% if item.xpos == 'center' %}
+            <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+            {% endif %}
+            {% endfor %}
+
+        </ul>
+    </div>
+
+    <div class="uk-navbar-right">
+        <ul class="uk-navbar-nav">
+
+            {% for item in menu %}
+            {% if item.xpos == 'right' %}
+            <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+            {% endif %}
+            {% endfor %}
+
+        </ul>
+    </div>
+
+    {% endif %}
 </nav>
