--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -7,7 +7,8 @@
     <title>BizOpt</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/813ad2426d.js" crossorigin="anonymous"></script>
 
@@ -19,48 +20,48 @@
             outline: none !important;
             box-shadow: none !important;
         }
-        
+
         .form-control:focus {
             box-shadow: none;
             border-color: #BA68C8
         }
-        
+
         .profile-button {
             background: rgb(99, 39, 120);
             box-shadow: none;
             border: none
         }
-        
+
         .profile-button:hover {
             background: #682773
         }
-        
+
         .profile-button:focus {
             background: #682773;
             box-shadow: none
         }
-        
+
         .profile-button:active {
             background: #682773;
             box-shadow: none
         }
-        
+
         .back:hover {
             color: #682773;
             cursor: pointer
         }
-        
+
         .labels {
             font-size: 14px
         }
-        
+
         .add-experience:hover {
             background: #BA68C8;
             color: #fff;
             cursor: pointer;
             border: solid 1px #BA68C8
         }
-        
+
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             /* display: none; <- Crashes Chrome on hover */
@@ -68,23 +69,23 @@
             margin: 0;
             /* <-- Apparently some margin are still there even though it's hidden */
         }
-        
+
         input[type=number] {
             -moz-appearance: textfield;
             /* Firefox */
         }
-        
+
         #regForm {
             background-color: #ffffff;
             margin: 0px auto;
             padding: 40px;
             border-radius: 10px
         }
-        
+
         h1 {
             text-align: center
         }
-        
+
         input {
             padding: 10px;
             width: 100%;
@@ -93,20 +94,20 @@
             border-radius: 10px;
             -webkit-appearance: none
         }
-        
+
         .tab input:focus {
             border: 1px solid #6a1b9a !important;
             outline: none
         }
-        
+
         input.invalid {
             border: 1px solid #e03a0666
         }
-        
+
         .tab {
             display: none
         }
-        
+
         button {
             background-color: #6A1B9A;
             color: #ffffff;
@@ -116,19 +117,19 @@
             font-size: 17px;
             cursor: pointer
         }
-        
+
         button:hover {
             opacity: 0.8
         }
-        
+
         button:focus {
             outline: none !important
         }
-        
+
         #prevBtn {
             background-color: #bbbbbb
         }
-        
+
         .all-steps {
             text-align: center;
             margin-top: 30px;
@@ -137,7 +138,7 @@
             display: inline-flex;
             justify-content: center
         }
-        
+
         .step {
             height: 40px;
             width: 40px;
@@ -152,17 +153,17 @@
             color: #6a1b9a;
             opacity: 0.5
         }
-        
+
         .step.active {
             opacity: 1
         }
-        
+
         .step.finish {
             color: #fff;
             background: #6a1b9a;
             opacity: 1
         }
-        
+
         .all-steps {
             text-align: center;
             margin-top: 30px;
@@ -190,7 +191,8 @@
 
 
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой профиль</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой
+                        профиль</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li class="ExtBtn">
                             <a href="#">Данные продавца</a>
@@ -236,200 +238,202 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 
 
-    <script type="text/javascript">
-        $(function() {
-            var pageNumber = 1; //here is a number of page
-            var xhr = new XMLHttpRequest()
-            xhr.open('GET', `becomeCreatorTemplates/${pageNumber}/`)
-            xhr.onload = function() {
+<script type="text/javascript">
+    $(function () {
 
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
+        var pageNumber = window.location.search[1]; //here is a number of page
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', `becomeCreatorTemplates/${pageNumber}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
 
-        $('.Btn').on('click', {}, function(inBody) {
-            var xhr = new XMLHttpRequest()
-            var index = $(this).index() + 1
-            xhr.open('GET', `becomeCreatorTemplates/${index}/`)
-            xhr.onload = function() {
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
+    });
 
-        $('.ExtBtn').on('click', {}, function(inBody) {
-            var xhr = new XMLHttpRequest()
-            var index = $(this).index() + 11
-            xhr.open('GET', `becomeCreatorTemplates/${index}/`)
-            xhr.onload = function() {
-                $('#MainWindowContainer').html(xhr.response)
-            }
-            xhr.send()
-        });
-    </script>
+    $('.Btn').on('click', {}, function (inBody) {
+        var xhr = new XMLHttpRequest()
+        var index = $(this).index() + 1
+        xhr.open('GET', `becomeCreatorTemplates/${index}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+    });
 
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
-    </script>
+    $('.ExtBtn').on('click', {}, function (inBody) {
+        var xhr = new XMLHttpRequest()
+        var index = $(this).index() + 11
+        xhr.open('GET', `becomeCreatorTemplates/${index}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+    });
+</script>
 
 
-    <style>
-        p {
-            font-family: 'Poppins', sans-serif;
-            font-size: 1.1em;
-            font-weight: 300;
-            line-height: 1.7em;
-            color: #999;
-        }
-        
-        a,
-        a:hover,
-        a:focus {
-            color: inherit;
-            text-decoration: none;
-            transition: all 0.3s;
-        }
-        
-        .navbar {
-            padding: 15px 10px;
-            background: #fff;
-            border: none;
-            border-radius: 0;
-            margin-bottom: 40px;
-            box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        }
-        
-        .navbar-btn {
-            box-shadow: none;
-            outline: none !important;
-            border: none;
-        }
-        
-        .line {
-            width: 100%;
-            height: 1px;
-            border-bottom: 1px dashed #ddd;
-            margin: 40px 0;
-        }
-        
-        .text-sidebar {
-            /* color: $text-sidebar; */
-        }
-        
-        .wrapper {
-            display: flex;
-            width: 100%;
-            align-items: stretch;
-        }
-        
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
+</script>
+
+
+<style>
+    p {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.1em;
+        font-weight: 300;
+        line-height: 1.7em;
+        color: #999;
+    }
+
+    a,
+    a:hover,
+    a:focus {
+        color: inherit;
+        text-decoration: none;
+        transition: all 0.3s;
+    }
+
+    .navbar {
+        padding: 15px 10px;
+        background: #fff;
+        border: none;
+        border-radius: 0;
+        margin-bottom: 40px;
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar-btn {
+        box-shadow: none;
+        outline: none !important;
+        border: none;
+    }
+
+    .line {
+        width: 100%;
+        height: 1px;
+        border-bottom: 1px dashed #ddd;
+        margin: 40px 0;
+    }
+
+    .text-sidebar {
+        /* color: $text-sidebar; */
+    }
+
+    .wrapper {
+        display: flex;
+        width: 100%;
+        align-items: stretch;
+    }
+
+    #sidebar {
+        min-width: 250px;
+        max-width: 250px;
+        background: #2B393B;
+        color: #BFE3F7;
+        transition: all 0.3s;
+    }
+
+    #sidebar.active {
+        margin-left: -250px;
+    }
+
+    #sidebar .sidebar-header {
+        padding: 20px;
+        /* background: $lila-60; */
+        /*#6d7fcc*/
+    }
+
+    .sidebar-header h3 {
+        color: white;
+    }
+
+    #sidebar ul.components {
+        padding: 20px 0;
+        /* border-bottom: 1px solid $lila-line; */
+    }
+
+    #sidebar ul p {
+        /* color: $text-sidebar; */
+        padding: 10px;
+    }
+
+    #sidebar ul li a {
+        padding: 10px;
+        font-size: 1.1em;
+        display: block;
+    }
+
+    #sidebar ul li a:hover {
+        /* color: $lila; */
+        /* background: $text-sidebar-hover; */
+    }
+
+    #sidebar ul li.active>a,
+    a[aria-expanded="true"] {
+        /* color: $text-sidebar; */
+        /* background: $lila-60; */
+    }
+
+    a[data-toggle="collapse"] {
+        position: relative;
+    }
+
+    .dropdown-toggle::after {
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+    }
+
+    ul ul a {
+        font-size: 0.9em !important;
+        padding-left: 30px !important;
+        /* background: $lila-60; */
+    }
+
+    ul.CTAs {
+        padding: 20px;
+    }
+
+    ul.CTAs a {
+        text-align: center;
+        font-size: 0.9em !important;
+        display: block;
+        border-radius: 5px;
+        margin-bottom: 5px;
+    }
+
+    a.download {
+        /* background: $text-sidebar; */
+        /* color: $lila; */
+    }
+
+    a.article,
+    a.article:hover {
+        /* background: $lila-60 !important; */
+        /* color: $text-sidebar !important; */
+    }
+
+    #content {
+        width: 100%;
+        min-height: 100vh;
+        transition: all 0.3s;
+    }
+
+    @media (max-width: 768px) {
         #sidebar {
-            min-width: 250px;
-            max-width: 250px;
-            background: #2B393B;
-            color: #BFE3F7;
-            transition: all 0.3s;
-        }
-        
-        #sidebar.active {
             margin-left: -250px;
         }
-        
-        #sidebar .sidebar-header {
-            padding: 20px;
-            /* background: $lila-60; */
-            /*#6d7fcc*/
-        }
-        
-        .sidebar-header h3{
-            color: white;
-        }
-        
-        #sidebar ul.components {
-            padding: 20px 0;
-            /* border-bottom: 1px solid $lila-line; */
-        }
-        
-        #sidebar ul p {
-            /* color: $text-sidebar; */
-            padding: 10px;
-        }
-        
-        #sidebar ul li a {
-            padding: 10px;
-            font-size: 1.1em;
-            display: block;
-        }
-        
-        #sidebar ul li a:hover {
-            /* color: $lila; */
-            /* background: $text-sidebar-hover; */
-        }
-        
-        #sidebar ul li.active>a,
-        a[aria-expanded="true"] {
-            /* color: $text-sidebar; */
-            /* background: $lila-60; */
-        }
-        
-        a[data-toggle="collapse"] {
-            position: relative;
-        }
-        
-        .dropdown-toggle::after {
-            display: block;
-            position: absolute;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-        }
-        
-        ul ul a {
-            font-size: 0.9em !important;
-            padding-left: 30px !important;
-            /* background: $lila-60; */
-        }
-        
-        ul.CTAs {
-            padding: 20px;
-        }
-        
-        ul.CTAs a {
-            text-align: center;
-            font-size: 0.9em !important;
-            display: block;
-            border-radius: 5px;
-            margin-bottom: 5px;
-        }
-        
-        a.download {
-            /* background: $text-sidebar; */
-            /* color: $lila; */
-        }
-        
-        a.article,
-        a.article:hover {
-            /* background: $lila-60 !important; */
-            /* color: $text-sidebar !important; */
-        }
-        
-        #content {
-            width: 100%;
-            min-height: 100vh;
-            transition: all 0.3s;
-        }
-        
-        @media (max-width: 768px) {
-            #sidebar {
-                margin-left: -250px;
-            }
-            #sidebar.active {
-                margin-left: 0;
-            }
-            #sidebarCollapse span {
-                display: none;
-            }
-        }
-    </style>
 
+        #sidebar.active {
+            margin-left: 0;
+        }
 
+        #sidebarCollapse span {
+            display: none;
+        }
+    }
+</style>
